# image2base64

./: .gitignore  Readme.md  pyproject.toml  requirement.txt
src/image2base64/: main.py
